Finalize implementation of V1 and V2 compliance profiles services
- missing compliance check rewrite and calculation of status when changing rules associations